feat: Refactor Discord mention handling and introduce yearly summary functionality
- Updated mention.ts to read from league.json and handle player information more effectively.
- Removed deprecated mentionForGeoguessrNick function and replaced it with displayNameForGeoId.
- Enhanced weeklySummary.ts to utilize new displayNameForGeoId for podium mentions.
- Implemented linkGeoToDiscord function to link GeoGuessr IDs with Discord IDs.
- Modified weeklyStore.ts to accommodate new data structure and added challenge metadata.
- Created yearlyStore.ts to aggregate yearly statistics and added functionality for full attendance tracking.
- Introduced yearlySummary.ts to post annual summaries to Discord.
- Added mapSelector.ts for selecting daily maps with cooldown and mode logic.
- Updated settings.ts to improve challenge payload creation and map selection logic.
- Enhanced types.ts to include additional map metadata.
- Created linkBotMain.ts as an entry point for the bot.
- Added players.ts for country code normalization.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/server.js",
     "standalone": "node dist/server.js --standalone",
-    "build": "tsc"
+    "build": "tsc",
+    "linkbot": "node dist/linkBotMain.js"
   },
   "keywords": [],
   "author": "",
