Refactor league data structure and update challenge messaging
- Removed outdated week data for January 2026 from league.json.
- Updated maps.json to remove "nmpz" mode from allowed modes and added new maps with appropriate configurations.
- Enhanced challenge messaging in Discord with dynamic introductions based on challenge settings.
- Improved yearly statistics calculations and reporting, including podium and attendance tracking.
- Adjusted challenge settings to include variable rounds and time limits based on the day of the week.
- Cleaned up yearly summary posting logic to streamline data presentation.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
-GEOGUESSR_EMAIL=your-geoguessr-email@gmail.com
-GEOGUESSR_PASSWORD=your-geoguessr-password
-DISCORD_TOKEN=your-discord-bot-token
-DISCORD_CHANNEL_ID=your-discord-channel-id
+GEOGUESSR_EMAIL=your_email
+GEOGUESSR_PASSWORD=your_password
+
+DISCORD_TOKEN=your_discord_bot_token
+DISCORD_CHANNEL_ID=channel_id_for_posts
+
+# Required for slash commands (/link, /unlink)
+DISCORD_GUILD_ID=your_server_id
+
+# Admin(s) allowed to use /unlink
+MY_DISCORD_ID=123456789012345678
