--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,8 @@ cookie.txt
 challengeToken.json
 logs/
 data/league.jsonBAK
+data/weekly*
+data/flags/*
+data/weekly-*
+data/weekly-2026-01-19.png
+data/league.json
