--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ DISCORD_GUILD_ID=your_server_id
 
 # Admin(s) allowed to use /unlink
 MY_DISCORD_ID=123456789012345678
+
+
+ADMIN_TOKEN=42843465419687874484796354387437643
+
+
+#DON'T USE '#' IN ANY VALUE, IT WILL BE CONSIDERED AS A COMMENT
