feat: update environment variables and clean up code in settings and highscores

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,16 @@ DISCORD_GUILD_ID=your_server_id
 MY_DISCORD_ID=123456789012345678
 
 
-ADMIN_TOKEN=42843465419687874484796354387437643
+ADMIN_TOKEN=1234567890abcdef124567890abcdef
+
+LEAGUE_START_DATE=2026-01-12
+WEEK_INDEX_START=1
+DAY_INDEX_START=1
 
 
 #DON'T USE '#' IN ANY VALUE, IT WILL BE CONSIDERED AS A COMMENT
+
+DISCORD_ROLE_DAILY_ID=098765432101234564321aeiou
+
+#TOKEN TO SEND CUSTOM MESSAGES WITH ENDPOINT /say
+ADMIN_TOKEN=abcdef1234567890abcdef1234567890
