info added in .env.example

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ DISCORD_ROLE_DAILY_ID=098765432101234564321aeiou
 
 #TOKEN TO SEND CUSTOM MESSAGES WITH ENDPOINT /say
 ADMIN_TOKEN=abcdef1234567890abcdef1234567890
+
+#en, es, fr, de, it, pt are available.
+BOT_LANG=en
