--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+#DON'T USE '#' IN ANY TOKEN OR PASSWORD, IT WILL BE CONSIDERED AS A COMMENT
+
+#Challenge creation
 GEOGUESSR_EMAIL=your_email
 GEOGUESSR_PASSWORD=your_password
 
@@ -10,16 +13,6 @@ DISCORD_GUILD_ID=your_server_id
 # Admin(s) allowed to use /unlink
 MY_DISCORD_ID=123456789012345678
 
-
-ADMIN_TOKEN=1234567890abcdef124567890abcdef
-
-LEAGUE_START_DATE=2026-01-12
-WEEK_INDEX_START=1
-DAY_INDEX_START=1
-
-
-#DON'T USE '#' IN ANY VALUE, IT WILL BE CONSIDERED AS A COMMENT
-
 DISCORD_ROLE_DAILY_ID=098765432101234564321aeiou
 
 #TOKEN TO SEND CUSTOM MESSAGES WITH ENDPOINT /say
@@ -27,3 +20,7 @@ ADMIN_TOKEN=abcdef1234567890abcdef1234567890
 
 #en, es, fr, de, it, pt are available.
 BOT_LANG=en
+
+LEAGUE_START_DATE=2026-01-12
+WEEK_INDEX_START=1
+DAY_INDEX_START=1
